--- a/modules/motd/templates/motd.erb
+++ b/modules/motd/templates/motd.erb
@@ -1,5 +1,3 @@
-<%= ascii %>
-===========================================================
 
-Welcome to <%= fqdn %>
+Welcome to <%= fqdn %>, you are on branch dev
 
